--- a/index.html
+++ b/index.html
@@ -8,33 +8,39 @@
 
     <title>ابداع</title>
   </head>
+
   <body>
     <!-- header -->
-    <header class="">
+    <header class="relative">
       <!-- desktop nav -->
-      <nav class="flex items-center justify-between md:justify-center ">
+      <nav class="flex items-center justify-between lg:justify-evenly w-full">
         <div>
           <img
             src="./images/image 1.png"
             alt="logo of the website"
-            width="100"
-            height="100"
             loading="eager"
             densities="1x 2x"
+            class="w-[138px] lg:h-[40px] my-[30px] md:ms-[80px] md:me-[41px] mx-[30px]"
           />
         </div>
-        <div class="list flex items-center gap-3 mx-[20px] md:mx-[41px]">
+        <div
+          class="flex items-center gap-3 mx-[20px] md:mx-[41px] my-[34px] lg:w-[101px] h-[32px]"
+        >
           <span class="stash--burger-classic list_icon"></span>
-          <span class="hidden md:flex">القائمة</span>
+          <span class="hidden lg:flex text-[20px]">القائمة</span>
         </div>
-        <div class="search hidden md:flex">
+        <div
+          class="search hidden lg:flex hover:bg-sky-100 lg:w-[592px] h-[48px]"
+        >
           <span class="line-md--search"></span>
-          <input type="search" placeholder="ابحث" class="outline-0" />
+          <input type="search" placeholder="ابحث" class="outline-0 w-full" />
         </div>
-        <div class="flex items-center gap-3 mx-[41px] hidden md:d-flex"">
+        <div
+          class="hidden lg:flex items-center gap-3 my-[23px] mx-[41px] lg:w-[157px] h-[54px]"
+        >
           <span
             ><img
-              src="./images/profile.svg"
+              src=" ./images/profile.svg"
               alt="profile icon"
               width="26.25"
               height="12.5"
@@ -46,7 +52,9 @@
             <p class="font-bold text-[18px] text-[#001A1E]">تسجيل دخول</p>
           </div>
         </div>
-        <div class="flex items-center gap-4 hidden md:flex">
+        <div
+          class="hidden lg:flex items-center gap-4 me-[80px] my-[34px] ms-[41px]"
+        >
           <img
             src="./images/mdi_cart-outline.svg"
             alt="cart-icon"
@@ -74,12 +82,65 @@
         </div>
       </nav>
       <!-- mobile nav -->
-      <nav class="mobile hidden w-50 h-100 bg-red-400">
-      <p>hello</p>
+      <nav class="mobile hidden w-90 h-[100vh] bg-[#B0C7CB]/80 rounded-xl p-3">
+        <div class="flex items-center justify-between">
+          <div>
+            <img
+              src="./images/image 1.png"
+              alt="logo of the website"
+              width="100"
+              height="100"
+              loading="eager"
+              densities="1x 2x"
+            />
+          </div>
+          <div class="flex items-center gap-3">
+            <span
+              ><img
+                src="./images/profile.svg"
+                alt="profile icon"
+                width="26.25"
+                height="12.5"
+                loading="eager"
+                densities="1x 2x"
+            /></span>
+            <div class="">
+              <p class="font-[400] text-[18px]">مرحبا بك</p>
+              <p class="font-bold text-[18px] text-[#001A1E]">تسجيل دخول</p>
+            </div>
+          </div>
+        </div>
+        <div
+          class="mt-3 border-2 rounded-xl flex items-center font-bold text-xl"
+        >
+          <span class="line-md--search"></span>
+          <input type="search" placeholder="ابحث" class="outline-0 p-2" />
+        </div>
       </nav>
-      <div class="hero"></div>
+      <section
+        class="hero absolute md:left-[100px] text-center my-[50px] lg:my-[200px] me-[48px]"
+      >
+        <p
+          class="lg:w-[760px] lg:h-[224px] font-bold text-[33px] lg:text-[56px] text-[#001A1E]"
+        >
+          جاهز تعيش تجربة تقنية <span class="text-[#004956]">مختلفة</span> أحدث
+          الأجهزة بانتظارك!
+        </p>
+        <button
+          class="lg:w-[222px] h-[74px] bg-[#004956] text-white font-bold text-[25px] lg:text-[32px] text-center px-[18px] lg:px-[36px] rounded-xl my-[20px] lg:my-[40px]"
+        >
+          تسوق الان
+        </button>
+      </section>
     </header>
-
+    <section class="flex flex-col justify-center items-center">
+      <h2 class="w-full h-[52px] font-bold text-[40px] text-[#001A1E] text-center lg:my-10">تسوق عبر الاقسام</h2>
+      <div>
+        <div class="departments">
+          
+        </div>
+      </div>
+    </section>
     <script src="./main.js"></script>
   </body>
 </html>
