Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <section class="flex flex-col justify-center items-center">
       <h2 class="w-full h-[52px] font-bold text-[40px] text-[#001A1E] text-center lg:my-10">تسوق عبر الاقسام</h2>
       <div>
-        <div class="departments">
+        <div class="departments container">
           
         </div>
       </div>
