Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -118,29 +118,45 @@
         </div>
       </nav>
       <section
-        class="hero absolute md:left-[100px] text-center my-[50px] lg:my-[200px] me-[48px]"
+        class="hero absolute md:left-[100px] text-center my-[20px] lg:my-[200px] me-[48px]"
       >
         <p
-          class="lg:w-[760px] lg:h-[224px] font-bold text-[33px] lg:text-[56px] text-[#001A1E]"
+          class="lg:w-[760px] lg:h-[224px] font-bold text-[30px] lg:text-[56px] text-[#001A1E]"
         >
           جاهز تعيش تجربة تقنية <span class="text-[#004956]">مختلفة</span> أحدث
           الأجهزة بانتظارك!
         </p>
         <button
-          class="lg:w-[222px] h-[74px] bg-[#004956] text-white font-bold text-[25px] lg:text-[32px] text-center px-[18px] lg:px-[36px] rounded-xl my-[20px] lg:my-[40px]"
+          class="lg:w-[222px] lg:h-[74px] bg-[#004956] text-white font-bold md:text-[25px] lg:text-[32px] text-center p-[15px] lg:px-[36px] rounded-xl my-[40px]"
         >
           تسوق الان
         </button>
       </section>
     </header>
+    <!--  shooping section -->
     <section class="flex flex-col justify-center items-center">
-      <h2 class="w-full h-[52px] font-bold text-[40px] text-[#001A1E] text-center lg:my-10">تسوق عبر الاقسام</h2>
-      <div>
-        <div class="departments container">
-          
+      <h2
+        class="w-full h-[52px] font-bold text-[40px] text-[#001A1E] text-center lg:my-10"
+      >
+        تسوق عبر الاقسام
+      </h2>
+
+      <div class="departments container"></div>
+    </section>
+    <!-- electronic section -->
+    <section class="md:mx-40 mx-10">
+      <div class="flex justify-between items-center mx-4">
+        <h2 class="font-bold text-[40px]">اجهزه الكترونيه</h2>
+        <div class="flex gap-6 arrow">
+          <span class="icon-park-outline--right right-arrow"></span>
+          <span class="icon-park-outline--left left-arrow"></span>
         </div>
       </div>
+      <section class="electronic">
+        <div class="container cards" >
+        </div>
+      </section>
     </section>
-    <script src="./main.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
