Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -153,9 +153,37 @@
         </div>
       </div>
       <section class="electronic">
-        <div class="container cards" >
-        </div>
+        <div class="container cards" id="cardsContainer"></div>
       </section>
+    </section>
+    <!--  in your world -->
+    <section class="your_world lg:p-20 md:p-16">
+      <div class="grid lg:grid-cols-2 grid-cols-1 justify-center items-center">
+        <div class="order-2 lg:order-1 m-2 p-2">
+          <h2 class="font-bold text-[56px] text-[#001A1E]">
+            غُص في عالمك الخاص!
+          </h2>
+          <p class="text-[32px] text-[#003741]">
+             اكتشف سماعات الرأس التي تأخذك إلى بُعد جديد من الصوت النقي والتجربة الفريدة, ودع الموسيقى تحكي قصتك.
+          </p>
+          <div class="text-center lg:text-right">
+             <button
+          class="lg:w-[222px] lg:h-[74px] bg-[#004956] text-white font-bold md:text-[25px] lg:text-[32px] text-center p-[15px] lg:px-[36px] rounded-xl my-[40px]"
+        >
+          تسوق الان
+        </button>
+          </div>
+        </div>
+        <div class="md:w-[500px]  lg:h-[500px] lg:order-2 order-1">
+          <img
+            src="./images/erbods_headphone.png"
+            alt="erbods_headphone"
+            loading="lazy"
+            width="100%"
+            height="100%"
+          />
+        </div>
+      </div>
     </section>
     <script type="module" src="./main.js"></script>
   </body>
