--- a/index.html
+++ b/index.html
@@ -185,6 +185,8 @@
         </div>
       </div>
     </section>
+    <!-- footer -->
+     
     <script type="module" src="./main.js"></script>
   </body>
 </html>
