Enhance user interface with close button functionality and improve code formatting

--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
                 densities="1x 2x"
             /></span>
             <div class="">
+             <div class="text-left close_list">
+               <span class="fluent-mdl2--error-badge "></span>
+             </div>
               <p class="font-[400] text-[18px]">مرحبا بك</p>
               <p class="font-bold text-[18px] text-[#001A1E]">تسجيل دخول</p>
             </div>
@@ -164,17 +167,18 @@
             غُص في عالمك الخاص!
           </h2>
           <p class="text-[32px] text-[#003741]">
-             اكتشف سماعات الرأس التي تأخذك إلى بُعد جديد من الصوت النقي والتجربة الفريدة, ودع الموسيقى تحكي قصتك.
+            اكتشف سماعات الرأس التي تأخذك إلى بُعد جديد من الصوت النقي والتجربة
+            الفريدة, ودع الموسيقى تحكي قصتك.
           </p>
           <div class="text-center lg:text-right">
-             <button
-          class="lg:w-[222px] lg:h-[74px] bg-[#004956] text-white font-bold md:text-[25px] lg:text-[32px] text-center p-[15px] lg:px-[36px] rounded-xl my-[40px]"
-        >
-          تسوق الان
-        </button>
+            <button
+              class="lg:w-[222px] lg:h-[74px] bg-[#004956] text-white font-bold md:text-[25px] lg:text-[32px] text-center p-[15px] lg:px-[36px] rounded-xl my-[40px]"
+            >
+              تسوق الان
+            </button>
           </div>
         </div>
-        <div class="md:w-[500px]  lg:h-[500px] lg:order-2 order-1">
+        <div class="md:w-[500px] lg:h-[500px] lg:order-2 order-1">
           <img
             src="./images/erbods_headphone.png"
             alt="erbods_headphone"
@@ -186,7 +190,7 @@
       </div>
     </section>
     <!-- footer -->
-     
+
     <script type="module" src="./main.js"></script>
   </body>
 </html>
