--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 densities="1x 2x"
             /></span>
             <div class="">
-             <div class="text-left close_list">
+             <div class="text-left close_list ">
                <span class="fluent-mdl2--error-badge "></span>
              </div>
               <p class="font-[400] text-[18px]">مرحبا بك</p>
@@ -120,6 +120,7 @@
           <input type="search" placeholder="ابحث" class="outline-0 p-2" />
         </div>
       </nav>
+      <!-- hero section -->
       <section
         class="hero absolute md:left-[100px] text-center my-[20px] lg:my-[200px] me-[48px]"
       >
@@ -129,7 +130,7 @@
           جاهز تعيش تجربة تقنية <span class="text-[#004956]">مختلفة</span> أحدث
           الأجهزة بانتظارك!
         </p>
-        <button
+        <button id="shooping_now"
           class="lg:w-[222px] lg:h-[74px] bg-[#004956] text-white font-bold md:text-[25px] lg:text-[32px] text-center p-[15px] lg:px-[36px] rounded-xl my-[40px]"
         >
           تسوق الان
@@ -137,7 +138,7 @@
       </section>
     </header>
     <!--  shooping section -->
-    <section class="flex flex-col justify-center items-center">
+    <section id="shooping" class="flex flex-col justify-center items-center">
       <h2
         class="w-full h-[52px] font-bold text-[40px] text-[#001A1E] text-center lg:my-10"
       >
