--- a/index.html
+++ b/index.html
@@ -55,17 +55,20 @@
         <div
           class="hidden lg:flex items-center gap-4 me-[80px] my-[34px] ms-[41px]"
         >
-         <div  class="cart_icon relative">
-           <img
-            src="./images/mdi_cart-outline.svg"
-            alt="cart-icon"
-            width="26.5"
-            height="26.5"
-            loading="eager"
-            densities="1x 2x"
-          />
-          <span class="showItems absolute bottom-5 text-red-600 right-2 font-bold">0</span>
-         </div>
+          <div class="cart_icon relative">
+            <img
+              src="./images/mdi_cart-outline.svg"
+              alt="cart-icon"
+              width="26.5"
+              height="26.5"
+              loading="eager"
+              densities="1x 2x"
+            />
+            <span
+              class="showItems absolute bottom-5 text-red-600 right-2 font-bold"
+              >0</span
+            >
+          </div>
           <img
             src="./images/language.svg"
             alt="cart-icon"
@@ -73,7 +76,6 @@
             height="26.5"
             loading="eager"
             densities="1x 2x"
-            
           />
           <img
             src="./images/uiw_setting-o.svg"
@@ -82,7 +84,6 @@
             height="26.5"
             loading="eager"
             densities="1x 2x"
-         
           />
         </div>
       </nav>
@@ -118,8 +119,7 @@
             </div>
           </div>
         </div>
-        <div class="flex items-start cart_icon relative ">
-
+        <div class="flex items-start cart_icon relative">
           <img
             src="./images/mdi_cart-outline.svg"
             alt="cart-icon"
@@ -128,7 +128,9 @@
             loading="eager"
             densities="1x 2x"
           />
-           <span class="showItems absolute bottom-5 text-red-600 right-2">0</span>
+          <span class="showItems absolute bottom-5 text-red-600 right-2"
+            >0</span
+          >
         </div>
         <div
           class="mt-3 border-2 rounded-xl flex items-center font-bold text-xl"
@@ -139,7 +141,7 @@
       </nav>
       <!-- hero section -->
       <section
-        class="hero absolute md:left-[100px] text-center my-[20px] lg:my-[200px] me-[48px]"
+        class="hero absolute md:left-[100px] text-center my-5 lg:my-10 me-[48px]"
       >
         <p
           class="lg:w-[760px] lg:h-[224px] font-bold text-[30px] lg:text-[56px] text-[#001A1E]"
