Add image assets for mail, phone, tab, and WhatsApp

--- a/index.html
+++ b/index.html
@@ -217,7 +217,76 @@
       </div>
     </section>
     <!-- footer -->
-
+    <section>
+      <div class="relative">
+        <button class="return_top px-10 py-2">الرجوع للأعلى</button>
+      </div>
+      <footer class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-4 p-10">
+        <div class="flex flex-col items-start justify-start ps-20">
+          <img
+            src="./images/image 1.png"
+            alt="logo of the website"
+            loading="eager"
+            densities="1x 2x"
+            class="w-[138px] lg:h-[40px] my-[30px]"
+          />
+          <p class="text-[#003741] text-[18px]">
+            تيكزون، متجر إلكتروني في المملكة العربية السعودية في جدة ويقدم
+            العديد من المنتجات الإلكترونية من قطع وإكسسوارات وألعاب الأطفال,
+            وغيرها من تسهيلات الحياة، خدماتنا لجميع دول الخليج العربي
+          </p>
+        </div>
+        <div>
+          <h2 class="text-[#001A1E] font-bold text-[24px]">روابط مهمه</h2>
+          <div
+            class="flex justify-evenly items-center my-4 text-[#003741] text-[18px]"
+          >
+            <p>سياسه الاستخدام والخصوصيه</p>
+            <p>سياسه الاستبدال والاسترجاع</p>
+          </div>
+        </div>
+        <div>
+          <h2 class="text-[24px] text-[#001A1E] font-bold">تواصل معنا</h2>
+          <div class="flex gap-4 my-4">
+            <div class="contact_us p-1">
+              <img
+                class="w-[28px] h-[28px]"
+                src="./images/phone.png"
+                alt="phone"
+                title="phone"
+              />
+            </div>
+            <div class="contact_us p-1">
+              <img
+                class="w-[20px] h-[28px]"
+                src="./images/tab.png"
+                alt="tab"
+                title="tab"
+              />
+            </div>
+            <div class="contact_us p-1">
+              <img
+                class="w-[28px] h-[28px]"
+                src="./images/whatsapp.png"
+                alt="whatsapp"
+                title="whatsapp"
+              />
+            </div>
+            <div class="contact_us p-1">
+              <img
+                class="w-[28px] h-[20px]"
+                src="./images/mail.png"
+                alt="mail"
+                title="mail"
+              />
+            </div>
+          </div>
+        </div>
+      </footer>
+      <div class="font-bold text-[20px] text-[#001A1E] text-right bg-[#D9E4E6] py-6 ps-20">
+        <p>الحقوق محفوظه | TEQZON 2025</p>
+      </div>
+    </section>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
