--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         <button class="return_top px-10 py-2">الرجوع للأعلى</button>
       </div>
       <footer class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-4 p-10">
-        <div class="flex flex-col items-start justify-start ps-20">
+        <div class="flex flex-col items-start justify-start md:ps-20">
           <img
             src="./images/image 1.png"
             alt="logo of the website"
