--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
           class="hidden lg:flex items-center gap-4 me-[80px] my-[34px] ms-[41px]"
         >
           <div class="cart_icon relative w-[26px] h-[26px]">
-            <img
+            <a href="cart.html"> 
+               <img
               src="./images/mdi_cart-outline.svg"
               alt="cart-icon"
               width="100%"
@@ -68,6 +69,8 @@
               class="showItems absolute bottom-5 text-red-600 right-2 font-bold"
               >0</span
             >
+            </a>
+           
           </div>
           <img
             src="./images/language.svg"
@@ -120,17 +123,19 @@
           </div>
         </div>
         <div class="flex items-start cart_icon relative">
-          <img
-            src="./images/mdi_cart-outline.svg"
-            alt="cart-icon"
-            width="26.5"
-            height="26.5"
-            loading="eager"
-            densities="1x 2x"
-          />
-          <span class="showItems absolute bottom-5 text-red-600 right-2"
-            >0</span
-          >
+          <a href="cart.html">
+            <img
+              src="./images/mdi_cart-outline.svg"
+              alt="cart-icon"
+              width="26.5"
+              height="26.5"
+              loading="eager"
+              densities="1x 2x"
+            />
+            <span class="showItems absolute bottom-5 text-red-600 right-2"
+              >0</span
+            >
+          </a>
         </div>
         <div
           class="mt-3 border-2 rounded-xl flex items-center font-bold text-xl"
@@ -187,7 +192,7 @@
       </div>
     </section>
     <!--  in your world -->
-    <section class="your_world lg:p-20 md:p-16">
+    <article class="your_world lg:p-20 md:p-16">
       <div class="grid lg:grid-cols-2 grid-cols-1 justify-center items-center">
         <div class="order-2 lg:order-1 m-2 p-2 text-center lg:text-right">
           <h2 class="font-bold text-[56px] text-[#001A1E]">
@@ -215,11 +220,13 @@
           />
         </div>
       </div>
-    </section>
+    </article>
     <!-- footer -->
     <section>
       <div class="relative">
-        <button class="return_top px-10 py-2">الرجوع للأعلى</button>
+        <button class="return_top px-10 py-2 hover:bg-red-900">
+          الرجوع للأعلى
+        </button>
       </div>
       <footer class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-4 p-10">
         <div class="flex flex-col items-start justify-start md:ps-20">
@@ -283,10 +290,12 @@
           </div>
         </div>
       </footer>
-      <div class="font-bold text-[20px] text-[#001A1E] text-right bg-[#D9E4E6] py-6 ps-20">
+      <div
+        class="font-bold text-[20px] text-[#001A1E] text-right bg-[#D9E4E6] py-6 ps-20"
+      >
         <p>الحقوق محفوظه | TEQZON 2025</p>
       </div>
     </section>
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="./main.js" ></script>
   </body>
 </html>
