Add cart deletion popup notification and update footer copyright date

--- a/cart.html
+++ b/cart.html
@@ -28,6 +28,12 @@
     <div class="cartsItems">
       
     </div>
+  <div id="cartPopup" class="cart-popup">
+        <div class="popup-content">
+          <span class="popup-icon">x</span>
+          <p>تم الحذف من السلة بنجاح</p>
+        </div>
+      </div>
 
     <script type="module" src="cart.js" defer></script>
   </body>
