--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
       <div
         class="font-bold text-[20px] text-[#001A1E] text-right bg-[#D9E4E6] py-6 ps-20"
       >
-        <p>الحقوق محفوظه | TEQZON 2025</p>
+        <p class='date'> </p>
       </div>
     </section>
     <script type="module" src="./main.js" ></script>
