--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
     <title>ابداع</title>
@@ -56,21 +57,20 @@
           class="hidden lg:flex items-center gap-4 me-[80px] my-[34px] ms-[41px]"
         >
           <div class="cart_icon relative w-[26px] h-[26px]">
-            <a href="cart.html"> 
-               <img
-              src="./images/mdi_cart-outline.svg"
-              alt="cart-icon"
-              width="100%"
-              height="100%"
-              loading="eager"
-              densities="1x 2x"
-            />
-            <span
-              class="showItems absolute bottom-5 text-red-600 right-2 font-bold"
-              >0</span
-            >
+            <a href="cart.html">
+              <img
+                src="./images/mdi_cart-outline.svg"
+                alt="cart-icon"
+                width="100%"
+                height="100%"
+                loading="eager"
+                densities="1x 2x"
+              />
+              <span
+                class="showItems absolute bottom-5 text-red-600 right-2 font-bold"
+                >0</span
+              >
             </a>
-           
           </div>
           <img
             src="./images/language.svg"
@@ -163,17 +163,21 @@
       </section>
     </header>
     <!--  shooping section -->
-    <section id="shopping" class="flex flex-col justify-center items-center">
+    <section
+      data-aos="fade-up"
+      id="shopping"
+      class="flex flex-col justify-center items-center"
+    >
       <h2
         class="w-full h-[52px] font-bold text-[40px] text-[#001A1E] text-center lg:my-10"
       >
         تسوق عبر الاقسام
       </h2>
 
-      <div class="departments container"></div>
+      <div class="departments container" data-aos="zoom-in"></div>
     </section>
     <!-- electronic section -->
-    <section class="md:mx-40 mx-10" id="electronics">
+    <section class="md:mx-40 mx-10" id="electronics" data-aos="fade-up">
       <div class="flex justify-between items-center mx-4">
         <h2 class="font-bold text-[40px]">اجهزه الكترونيه</h2>
         <div class="flex gap-6 arrow">
@@ -182,7 +186,11 @@
         </div>
       </div>
       <section class="electronic">
-        <div class="container cards" id="cardsContainer"></div>
+        <div
+          class="container cards"
+          id="cardsContainer"
+          data-aos="zoom-in"
+        ></div>
       </section>
       <div id="cartPopup" class="cart-popup">
         <div class="popup-content">
@@ -192,7 +200,7 @@
       </div>
     </section>
     <!--  in your world -->
-    <article class="your_world lg:p-20 md:p-16">
+    <article class="your_world lg:p-20 md:p-16" data-aos="fade-up">
       <div class="grid lg:grid-cols-2 grid-cols-1 justify-center items-center">
         <div class="order-2 lg:order-1 m-2 p-2 text-center lg:text-right">
           <h2 class="font-bold text-[56px] text-[#001A1E]">
@@ -224,7 +232,10 @@
     <!-- footer -->
     <section>
       <div class="relative">
-        <button class="return_top px-10 py-2 hover:bg-red-900">
+        <button
+          class="return_top px-10 py-2 hover:bg-red-900"
+          data-aos="zoom-out"
+        >
           الرجوع للأعلى
         </button>
       </div>
@@ -293,9 +304,13 @@
       <div
         class="font-bold text-[20px] text-[#001A1E] text-right bg-[#D9E4E6] py-6 ps-20"
       >
-        <p class='date'> </p>
+        <p class="date"></p>
       </div>
     </section>
-    <script type="module" src="./main.js" ></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
