Fix file paths in HTML and CSS; update cart popup messages and add new headphone section

--- a/cart.html
+++ b/cart.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cart Items</title>
-    <link rel="stylesheet" href="cart.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./styles/cart.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
     <nav class="">
@@ -22,18 +22,16 @@
         </a>
       </div>
     </nav>
-   <div class="cart-title">
-     <h2 class="">cart item</h2>
-   </div>
-    <div class="cartsItems">
-      
+    <div class="cart-title">
+      <h2 class="">cart item</h2>
     </div>
-  <div id="cartPopup" class="cart-popup">
-        <div class="popup-content">
-          <span class="popup-icon">x</span>
-          <p>تم الحذف من السلة بنجاح</p>
-        </div>
+    <div class="cartsItems"></div>
+    <div id="cartPopup" class="cart-popup">
+      <div class="popup-content">
+        <span class="popup-icon">x</span>
+        <p>تم الحذف من السلة بنجاح</p>
       </div>
+    </div>
 
     <script type="module" src="cart.js" defer></script>
   </body>
