--- a/cart.html
+++ b/cart.html
@@ -33,6 +33,6 @@
       </div>
     </div>
 
-    <script type="module" src="cart.js" defer></script>
+    <script type="module" src="./scripts/cart.js" defer></script>
   </body>
 </html>
