--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
         <div
           class="hidden lg:flex items-center gap-4 me-[80px] my-[34px] ms-[41px]"
         >
-          <div class="cart_icon relative w-[26px] h-[26px]">
+          <div class="cart_icon relative">
             <a href="cart.html">
               <img
                 src="./images/mdi_cart-outline.svg"
                 alt="cart-icon"
-                width="100%"
-                height="100%"
                 loading="eager"
                 densities="1x 2x"
+                width="26.5"
+                height="26.5"
               />
               <span
                 class="showItems absolute bottom-5 text-red-600 right-2 font-bold"
@@ -230,17 +230,17 @@
       </div>
     </article>
     <!-- headphone  -->
-    <section class="md:mx-40 mx-10" id="electronics" data-aos="fade-up">
+    <section class="md:mx-40 mx-10" id="headphone" data-aos="fade-up">
       <div class="flex justify-between items-center mx-4">
-        <h2 class="font-bold text-[40px]"> سماعات</h2>
+        <h2 class="font-bold text-[40px]">سماعات</h2>
         <div class="flex gap-6 arrow">
           <span class="icon-park-outline--right right-arrow"></span>
           <span class="icon-park-outline--left left-arrow"></span>
         </div>
       </div>
-      <section class="electronic">
+      <section class="headphone">
         <div
-          class="container cards"
+          class="container headphoneCards"
           id="cardsContainer"
           data-aos="zoom-in"
         ></div>
@@ -251,8 +251,8 @@
           <p>تمت الإضافة إلى السلة بنجاح</p>
         </div>
       </div>
-    </section> 
- <!-- footer -->
+    </section>
+    <!-- footer -->
     <section>
       <div class="relative">
         <button class="return_top px-10 py-2 hover:bg-red-900">
@@ -328,7 +328,6 @@
       </div>
     </section>
 
-    
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init();
