Add clients opinion section with styles and functionality

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
       </div>
     </section>
     <!--  in your world -->
-    <article class="your_world lg:p-20 md:p-16" data-aos="fade-up">
+    <article class="your_world lg:p-20 md:p-16" data-aos="fade-down">
       <div class="grid lg:grid-cols-2 grid-cols-1 justify-center items-center">
         <div class="order-2 lg:order-1 m-2 p-2 text-center lg:text-right">
           <h2 class="font-bold text-[56px] text-[#001A1E]">
@@ -271,6 +271,25 @@
           <p>تمت الإضافة إلى السلة بنجاح</p>
         </div>
       </div>
+    </section>
+    <!-- clients opinion -->
+      <section class="md:mx-40 mx-10" id="clients" data-aos="fade-up">
+      <div class="flex justify-between items-center mx-4">
+        <h2 class="font-bold text-[40px]">أراء العملاء </h2>
+        <div class="flex gap-6 arrow">
+         <span class="text-[#004956] font-bold text-[24px]" role="button">عرض الكل</span>
+        </div>
+      </div>
+      <section class="clients">
+        <div
+          class="container cards"
+          id="cardsContainer"
+          data-aos="zoom-out"
+        >
+    
+      </div>
+      </section>
+     
     </section>
     <!-- footer -->
     <section>
