Update cart and index pages for improved functionality and layout; enhance cart styles and add item quantity display

--- a/cart.html
+++ b/cart.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -23,7 +23,7 @@
       </div>
     </nav>
     <div class="cart-title">
-      <h2 class="">cart item</h2>
+      <h2 class="">cart item :  <span id="itemsNumber">0</span></h2>
     </div>
     <div class="cartsItems"></div>
     <div id="cartPopup" class="cart-popup">
