--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         </button>
       </section>
     </header>
-    <!--  shooping section -->
+    <!--  shopping section -->
     <section
       data-aos="fade-up"
       id="shopping"
