in cart Html add nav bar to its page as the ui design, in index.html file change header add id to its , add functionality in cart item to add and remove items from items cart itself but still work on it

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <body>
     <!-- header -->
-    <header class="relative">
+    <header class="relative" id="header">
       <!-- desktop nav -->
       <nav class="flex items-center justify-between lg:justify-evenly w-full">
         <div>
