--- a/cart.html
+++ b/cart.html
@@ -1,29 +1,153 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cart Items</title>
     <link rel="stylesheet" href="./styles/cart.css" />
     <link rel="stylesheet" href="./styles/style.css" />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
   <body>
-    <nav class="">
-      <div class="logo-cart">
-        <a href="index.html">
+    <header>
+      <!-- desktop nav -->
+      <nav class="flex items-center justify-between lg:justify-evenly w-full">
+        <div>
           <img
             src="./images/image 1.png"
             alt="logo of the website"
-            width="100"
-            height="100"
+            loading="eager"
+            densities="1x 2x"
+            class="w-[138px] lg:h-[40px] my-[30px] md:ms-[80px] md:me-[41px] mx-[30px]"
+          />
+        </div>
+        <div
+          class="flex items-center gap-3 mx-[20px] md:mx-[41px] my-[34px] lg:w-[101px] h-[32px]"
+        >
+          <span class="stash--burger-classic list_icon"></span>
+          <span class="hidden lg:flex text-[20px]">القائمة</span>
+        </div>
+        <div
+          class="search hidden lg:flex hover:bg-sky-100 lg:w-[592px] h-[48px]"
+        >
+          <span class="line-md--search"></span>
+          <input
+            type="search"
+            placeholder="ابحث"
+            class="outline-0 w-full search_input"
+          />
+        </div>
+        <div
+          class="hidden lg:flex items-center gap-3 my-[23px] mx-[41px] lg:w-[157px] h-[54px]"
+        >
+          <span
+            ><img
+              src=" ./images/profile.svg"
+              alt="profile icon"
+              width="26.25"
+              height="12.5"
+              loading="eager"
+              densities="1x 2x"
+          /></span>
+          <div class="">
+            <p class="font-[400] text-[18px]">مرحبا بك</p>
+            <p class="font-bold text-[18px] text-[#001A1E]">تسجيل دخول</p>
+          </div>
+        </div>
+        <div
+          class="hidden lg:flex items-center gap-4 me-[80px] my-[34px] ms-[41px]"
+        >
+          <div class="cart_icon relative">
+            <a href="cart.html" role="button">
+              <img
+                src="./images/mdi_cart-outline.svg"
+                alt="cart-icon"
+                loading="eager"
+                densities="1x 2x"
+                width="26.5"
+                height="26.5"
+              />
+              <span
+                class="showItems absolute bottom-5 text-red-600 right-2 font-bold"
+                >0</span
+              >
+            </a>
+          </div>
+          <img
+            src="./images/language.svg"
+            alt="cart-icon"
+            width="26.5"
+            height="26.5"
             loading="eager"
             densities="1x 2x"
           />
-        </a>
-      </div>
-    </nav>
+          <img
+            src="./images/uiw_setting-o.svg"
+            alt="cart-icon"
+            width="26.5"
+            height="26.5"
+            loading="eager"
+            densities="1x 2x"
+          />
+        </div>
+      </nav>
+      <!-- mobile nav -->
+      <nav class="mobile hidden w-90 h-[100vh] bg-[#B0C7CB]/80 rounded-xl p-3">
+        <div class="flex items-center justify-between">
+          <div>
+            <img
+              src="./images/image 1.png"
+              alt="logo of the website"
+              width="100"
+              height="100"
+              loading="eager"
+              densities="1x 2x"
+            />
+          </div>
+          <div class="flex items-center gap-3">
+            <span
+              ><img
+                src="./images/profile.svg"
+                alt="profile icon"
+                width="26.25"
+                height="12.5"
+                loading="eager"
+                densities="1x 2x"
+            /></span>
+            <div class="">
+              <div class="text-left close_list">
+                <span class="fluent-mdl2--error-badge" title="close"></span>
+              </div>
+              <p class="font-[400] text-[18px]">مرحبا بك</p>
+              <p class="font-bold text-[18px] text-[#001A1E]">تسجيل دخول</p>
+            </div>
+          </div>
+        </div>
+        <div class="flex items-start cart_icon relative">
+          <a href="cart.html">
+            <img
+              src="./images/mdi_cart-outline.svg"
+              alt="cart-icon"
+              width="26.5"
+              height="26.5"
+              loading="eager"
+              densities="1x 2x"
+            />
+            <span class="showItems absolute bottom-5 text-red-600 right-2"
+              >0</span
+            >
+          </a>
+        </div>
+        <div
+          class="mt-3 border-2 rounded-xl flex items-center font-bold text-xl"
+        >
+          <span class="line-md--search"></span>
+          <input type="search" placeholder="ابحث" class="outline-0 p-2" />
+        </div>
+      </nav>
+    </header>
     <div class="cart-title">
-      <h2 class="">cart item :  <span id="itemsNumber">0</span></h2>
+      <h2 class="">cart item : <span id="itemsNumber">0</span></h2>
     </div>
     <div class="cartsItems"></div>
     <div id="cartPopup" class="cart-popup">
