make logo clicked and back to home page

--- a/cart.html
+++ b/cart.html
@@ -13,13 +13,16 @@
       <!-- desktop nav -->
       <nav class="flex items-center justify-between lg:justify-evenly w-full">
         <div>
-          <img
-            src="./images/image 1.png"
-            alt="logo of the website"
-            loading="eager"
-            densities="1x 2x"
-            class="w-[138px] lg:h-[40px] my-[30px] md:ms-[80px] md:me-[41px] mx-[30px]"
-          />
+          <a href="index.html">
+
+            <img
+              src="./images/image 1.png"
+              alt="logo of the website"
+              loading="eager"
+              densities="1x 2x"
+              class="w-[138px] lg:h-[40px] my-[30px] md:ms-[80px] md:me-[41px] mx-[30px]"
+            />
+          </a>
         </div>
         <div
           class="flex items-center gap-3 mx-[20px] md:mx-[41px] my-[34px] lg:w-[101px] h-[32px]"
