--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       </nav>
       <!-- hero section -->
       <section
-        class="hero absolute md:left-[100px] text-center my-5 lg:my-10 me-[48px]"
+        class="hero absolute md:left-[100px] text-center my-5 lg:my-10 me-[48px] w-full"
       >
         <p
           class="lg:w-[760px] lg:h-[224px] font-bold text-[30px] lg:text-[56px] text-[#001A1E]"
@@ -204,7 +204,7 @@
       </div>
     </section>
     <!--  in your world -->
-    <article class="your_world lg:p-20 md:p-16" data-aos="fade-down">
+    <article class="your_world lg:p-20 md:p-16  "data-aos="fade-down">
       <div class="grid lg:grid-cols-2 grid-cols-1 justify-center items-center">
         <div class="order-2 lg:order-1 m-2 p-2 text-center lg:text-right">
           <h2 class="font-bold text-[56px] text-[#001A1E]">
@@ -222,13 +222,13 @@
             </button>
           </div>
         </div>
-        <div class="md:w-[500px] lg:h-[500px] lg:order-2 order-1">
+        <div class="flex justify-center items-center md:w-[650px] md:h-[700px] lg:order-2 order-1">
           <img
             src="./images/erbods_headphone.png"
             alt="erbods_headphone"
             loading="lazy"
-            width="100%"
-            height="100%"
+           
+            class="w-90 md:w-full"
           />
         </div>
       </div>
