Enhance cart summary layout with improved styling and button design

--- a/cart.html
+++ b/cart.html
@@ -183,36 +183,48 @@
               name="code"
               id="code"
               placeholder="ادخل كود الخصم"
-              class="border rounded p-2"
+              class="border placeholder:text-[#001A1E] border-[#B0C7CB] rounded p-2"
             />
-            <button class="bg-blue-900 text-white p-2 text-center rounded-xl">
+            <button
+              class="bg-[#004956] text-white text-6 p-2 text-center rounded-xl"
+            >
               اضافه
             </button>
           </div>
           <hr class="text-[#B0C7CB] w-90 lg:w-50 mx-auto my-4" />
           <div>
-            <h3>ملخص الطلب:</h3>
+            <h3 class="text-[#001A1E] text-6 font-bold">ملخص الطلب:</h3>
             <div class="flex justify-between items-center px-3">
               <p>مجموع المنتجات(بدون ضريبه)</p>
-              <span>0</span>
+              <span class="text-[#001A1E]">0</span>
             </div>
             <div class="flex justify-between items-center px-3">
               <p>توصيل</p>
-              <span>مجاني</span>
+              <span class="text-[#001A1E]">مجاني</span>
             </div>
           </div>
           <hr class="text-[#B0C7CB] w-90 lg:w-50 mx-auto my-4" />
 
           <div class="flex justify-between items-center px-3">
-            <h3>الاجمالي:</h3>
-            <span>0</span>
+            <h3 class="text-[#001A1E] text-6 font-bold">الاجمالي:</h3>
+            <span class="text-[#001A1E]">0</span>
           </div>
-          <div>
-            <button>استمرار</button>
-            <a href="/index.html">اضافه عناصر</a>
+          <div class="mx-5 text-center">
+            <button
+              class="bg-[#004956] text-white inline-block w-full p-3 m-2 rounded-xl"
+            >
+              استمرار
+            </button>
+            <a
+              href="/index.html"
+              class="text-[#004956] w-full inline-block p-3 m-2 rounded-xl border"
+              >اضافه عناصر</a
+            >
           </div>
         </div>
-        <span>دفع آمن, استرجاع سهل, منتجات اصليه 100%</span>
+        <span class="text-[#003741]"
+          >دفع آمن, استرجاع سهل, منتجات اصليه 100%</span
+        >
       </section>
     </main>
     <div id="cartPopup" class="cart-popup">
