--- a/index.html
+++ b/index.html
@@ -150,17 +150,20 @@
       </nav>
       <!-- hero section -->
       <section
-        class="hero absolute md:left-[100px] text-center my-5 lg:my-10 me-[48px] w-full"
+        class="hero text-center my-5 lg:my-10 me-[48px] w-full"
       >
-        <p
-          class="lg:w-[760px] lg:h-[224px] font-bold text-[30px] lg:text-[56px] text-[#001A1E]"
-        >
-          جاهز تعيش تجربة تقنية <span class="text-[#004956]">مختلفة</span> أحدث
-          الأجهزة بانتظارك!
-        </p>
+    <div class=" absolute lg:right-[50%] text-center my-5 lg:my-10 me-[48px] w-full">
+
+      <p
+        class="h-[224px] lg:w-[700px] font-bold text-[30px] lg:text-[56px] text-[#001A1E]"
+      >
+        جاهز تعيش تجربة تقنية <span class="text-[#004956]">مختلفة</span> أحدث
+        الأجهزة بانتظارك!
+      </p>
+    </div>
         <button
           id="shopping_now"
-          class="lg:w-[222px] lg:h-[74px] bg-[#004956] text-white font-bold md:text-[25px] lg:text-[32px] text-center p-[15px] lg:px-[36px] rounded-xl my-[40px]"
+          class="lg:w-[222px] lg:h-[74px] bg-[#004956] text-white font-bold md:text-[25px] lg:text-[32px] text-center p-[15px] lg:px-[36px] rounded-xl my-[40px] translate-y-60"
         >
           تسوق الان
         </button>
@@ -204,9 +207,9 @@
       </div>
     </section>
     <!--  in your world -->
-    <article class="your_world lg:p-20 md:p-16  "data-aos="fade-down">
-      <div class="grid lg:grid-cols-2 grid-cols-1 justify-center items-center">
-        <div class="order-2 lg:order-1 m-2 p-2 text-center lg:text-right">
+    <section class="your_world lg:p-20 md:p-16" data-aos="fade-down">
+      <div class="grid grid-cols-1 xl:grid-cols-2 justify-center items-center">
+        <article class="order-2 lg:order-1 m-2 p-2 text-center xl:text-right" data-aos="fade-down">>
           <h2 class="font-bold text-[56px] text-[#001A1E]">
             غُص في عالمك الخاص!
           </h2>
@@ -214,25 +217,24 @@
             اكتشف سماعات الرأس التي تأخذك إلى بُعد جديد من الصوت النقي والتجربة
             الفريدة, ودع الموسيقى تحكي قصتك.
           </p>
-          <div class="text-center lg:text-right">
+          <div class="text-center xl:text-right">
             <button
               class="lg:w-[222px] lg:h-[74px] bg-[#004956] text-white font-bold md:text-[25px] lg:text-[32px] text-center p-[15px] lg:px-[36px] rounded-xl my-[40px]"
             >
               تسوق الان
             </button>
           </div>
-        </div>
-        <div class="flex justify-center items-center md:w-[650px] md:h-[700px] lg:order-2 order-1">
+        </article>
+        <div class=" hidden xl:flex justify-center items-center lg:w-[650px] md:h-[700px] lg:order-2 order-1" data-aos="fade-down">>
           <img
             src="./images/erbods_headphone.png"
             alt="erbods_headphone"
-            loading="lazy"
-           
-            class="w-90 md:w-full"
+            loading="lazy"      
+            class="w-60 md:w-90 lg:w-full"
           />
         </div>
       </div>
-    </article>
+    </section>
     <!-- headphone  -->
     <section class="md:mx-40 mx-10" id="headphone" data-aos="fade-up">
       <div class="flex justify-between items-center mx-4">
@@ -252,7 +254,7 @@
       <div id="cartPopup" class="cart-popup">
         <div class="popup-content">
           <span class="popup-icon">✓</span>
-          <p تمت الإضافة إلى السلة بنجاح</p>
+          <p> تمت الإضافة إلى السلة بنجاح</p>
         </div>
       </div>
     </section>
