--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       <section
         class="hero text-center my-5 lg:my-10 me-[48px] w-full"
       >
-    <div class=" absolute lg:right-[50%] text-center my-5 lg:my-10 me-[48px] w-full">
+    <div class=" absolute xl:right-[50%] lg:right-40 text-center my-5 lg:my-10 me-[48px] w-full">
 
       <p
         class="h-[224px] lg:w-[700px] font-bold text-[30px] lg:text-[56px] text-[#001A1E]"
