Update cart button to link to success order page and add success order confirmation page

--- a/cart.html
+++ b/cart.html
@@ -212,11 +212,11 @@
             <span class="text-[#001A1E] allTotal">0</span>
           </div>
           <div class="mx-5 text-center">
-            <button
+            <a
               class="bg-[#004956] text-white inline-block w-full p-3 m-2 rounded-xl"
-            >
+           href="/successOrder.html" >
               استمرار
-            </button>
+            </a>
             <a
               href="/index.html"
               class="text-[#004956] w-full inline-block p-3 m-2 rounded-xl border"
