Replace "عرض الكل" span with button for improved accessibility and interactivity

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
       <div class="flex justify-between items-center mx-4">
         <h2 class="font-bold text-[40px]">أراء العملاء </h2>
         <div class="flex gap-6 arrow">
-         <span class="text-[#004956] font-bold text-[24px]" role="button">عرض الكل</span>
+         <button class="text-[#004956] font-bold text-[24px] showMore">عرض الكل</button>
         </div>
       </div>
       <section class="clients">
